<resources>
    <string name="app_name">Time For Travel</string>
    <string name="usernameHint"> Username (E-mail) </string>
    <string name="passwordHint"> Password </string>
    <string name="passwordConfirmationHint"> Password confirmation</string>
    <string name="logInButtonText">Log In</string>
    <string name="registerButtonText">Register</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="notRegisteredLabel">Not registered yet?</string>
    <string name="errorText"> </string>
    <string name="firstNameHint"> FirstName </string>
    <string name="OwnerUserNameHint">Owners username </string>
    <string name="rateOwnerButton">Rate owner:</string>
    <string name="lastNameHint"> LastName </string>
    <string name="phoneNumberHint"> Phone Number </string>
    <string name="addressHint"> Address </string>
    <string name="maleRadioButton"> Male </string>
    <string name="femaleRadioButton"> Female </string>
    <string name="saveChanges"> Save changes </string>
    <string name="deleteAccount"> Delete account </string>
    <string name="wannadeleteAccount">Do you want to delete your account?</string>
    <string name="accommodation1">Accommodation 1</string>
    <string name="accommodation1Description">Beautiful accommodation with great look</string>
    <string name="accommodation2">Accommodation 2</string>
    <string name="accommodation2Description">Even more beautiful accommodation with greater look</string>
    <string name="filters">Filter</string>
    <string name="sort">sort</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="room">ROOM</string>
    <string name="apartment">APARTMENT</string>
    <string name="vip_room">VIP ROOM</string>
    <string name="assets">Assets</string>
    <string name="wifi">Free wi-fi</string>
    <string name="pool">Swimming pool</string>
    <string name="TV">Television</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="ownerRadioButton">Owner</string>
    <string name="guestRadioButton">Guest</string>
    <string name="adminRadioButton">Admin</string>
    <string name="registerAsLabel"> Register as : </string>
    <string name="arrivalDate">Arrival date</string>
    <string name="checkoutDate">Check-out date</string>
    <string name="accommodationNameHint"> Accommodation name </string>
    <string name="locationHint"> Location </string>
    <string name="descriptionHint"> Description </string>
    <string name="minNumOfGuests"> Min guests  </string>
    <string name="maxNumOfGuests"> Max guests  </string>
    <string name="minTotalPrice">Min price</string>
    <string name="maxTotalPrice">Max price</string>
    <string name="apartmentRadioButton"> Apartment</string>
    <string name="roomRadioButton"> Room</string>
    <string name="createAccommodationButtonText"> Create </string>
    <string name="amenities"> Amenities </string>
    <string name="freeParking">Free Parking</string>
    <string name="kitchen">Kitchen</string>
    <string name="perAccommodationUnitRadioButton"> Per unit</string>
    <string name="perGuestRadioButton"> Per guest</string>

    <string name="all_accomodations">All accomodations requests</string>
    <string name="approve_accommodations">Approve accommodations</string>

    <string name="price">Price : </string>
    <string name="startDateHint">Start date </string>
    <string name="endDateHint">End date </string>
    <string name="reservationConfirmation">Reservation confirmation</string>
    <string name="radioButtonAutomatic">Automatic</string>
    <string name="radioButtonManual">Manual</string>
    <string name="accommodationType">Type of accommodation</string>
    <string name="addImage">+Add image</string>
    <string name="addPriceCard">+Add price card</string>
    <string name="saveButton">Save</string>
    <string name="cancelButton">X</string>
    <string name="cancellationDeadLine">Deadline</string>
    <string name="accommodationAvailability">+Add availability</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xCoordinate">X</string>
    <string name="yCoordinate">Y</string>
    <string name="cityHint">City</string>
    <string name="countryHint">Country</string>
    <string name="notificationSettingsTitle">Notification settings</string>
    <string name="textNotificationSettings">By enabling notifications, you will regularly receive updates from us. It is important to note that notifications will be sent at specific intervals to provide you with the best user experience. Thank you for choosing to receive notifications and being part of our community!</string>

</resources>