<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterScreenActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.35"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPasswordConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/passwordConfirmationHint"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintWidth_percent="0.75" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/toggleButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Toggle Button"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/languageButton"
                android:layout_width="30dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Language Button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_language" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="35dp"
                android:layout_height="37dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Settings Button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_settings_black" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/registerIcon"
        android:layout_width="78dp"
        android:layout_height="49dp"
        android:layout_marginEnd="148dp"
        android:src="@drawable/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:layout_constraintWidth_percent="0.2" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:hint="@string/firstNameHint"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lastNameHint"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/usernameHint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/addressHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
        app:layout_constraintWidth_percent="0.75"
        android:padding="12dp"/>

    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="231dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"
        app:layout_constraintWidth_percent="0.5">

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/guestRadioButton"
            app:buttonTint="@color/colorButton"
            android:fontFamily="serif"/>

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ownerRadioButton"
            app:buttonTint="@color/colorButton"
            android:fontFamily="serif"

            />

    </RadioGroup>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorButton"
        android:text="@string/createAccountButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupRole"
        app:layout_constraintWidth_percent="0.5"
        android:fontFamily="serif"/>

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errorText"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>