<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateAccommodationActivity">


    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-28dp">

        <ImageView
            android:layout_width="410dp"
            android:layout_height="746dp"
            android:alpha="0.35"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />
    </androidx.drawerlayout.widget.DrawerLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent1"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/toggleButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="Toggle Button"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/languageButton"
                android:layout_width="6dp"
                android:layout_height="26dp"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Language Button"
                android:scaleType="fitCenter"
                android:src="@drawable/language_icon" />

            <ImageButton
                android:id="@+id/settingsButton"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Settings Button"
                android:scaleType="fitCenter"
                android:src="@drawable/settings_icon" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/accommodationIcon"
        android:layout_width="78dp"
        android:layout_height="49dp"
        android:layout_marginEnd="148dp"
        android:src="@drawable/new_accommodation_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:layout_constraintWidth_percent="0.2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accommodationNameHint"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locationHint"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/locationInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHorizontal_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionHint"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minNumOfGuestsInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMinNumOfGusets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/minNumOfGuests"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maxNumOfGuestsInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/minNumOfGuestsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMaxNumOfGusets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxNumOfGuests"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/priceLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/maxNumOfGuestsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHorizontal_bias="0.5"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroupPriceType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButtonPerGuest"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/perGuestRadioButton"
                app:buttonTint="@color/colorButton" />

            <RadioButton
                android:id="@+id/radioButtonAccommodationUnit"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="serif"
                android:text="@string/perAccommodationUnitRadioButton"
                app:buttonTint="@color/colorButton" />
        </RadioGroup>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupAccommodationType"
        android:layout_width="231dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceLayout"
        app:layout_constraintWidth_percent="0.5">

        <RadioButton
            android:id="@+id/radioButtonRoom"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/roomRadioButton"
            app:buttonTint="@color/colorButton" />

        <RadioButton
            android:id="@+id/radioButtonApartment"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="serif"
            android:text="@string/apartmentRadioButton"
            app:buttonTint="@color/colorButton"

            />

    </RadioGroup>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="serif"
        android:text="@string/createAccommodationButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amenitiesCheckList"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errorText"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@id/buttonCreate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <ImageButton
        android:id="@+id/myButton"
        android:layout_width="69dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="Add images"
        android:onClick="onButtonClick"
        android:src="@drawable/add_image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceLayout" />


    <LinearLayout
        android:id="@+id/amenitiesCheckList"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupAccommodationType">

        <LinearLayout
            android:id="@+id/amenitiesCheckListLeft"
            android:layout_width="162dp"
            android:layout_height="92dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupAccommodationType">

            <CheckBox
                android:id="@+id/checkBoxWiFi"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/wifi"
                app:buttonTint="@color/colorButton" />

            <CheckBox
                android:id="@+id/checkBoxParking"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/freeParking"
                app:buttonTint="@color/colorButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/amenitiesCheckListRight"
            android:layout_width="162dp"
            android:layout_height="92dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/amenitiesCheckListRight"
            app:layout_constraintHorizontal_bias="0.204"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupAccommodationType">

            <CheckBox
                android:id="@+id/checkBoxAirConditioning"
                android:layout_width="154dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/air_conditioner"
                app:buttonTint="@color/colorButton" />

            <CheckBox
                android:id="@+id/checkBoxKitchen"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/kitchen"
                app:buttonTint="@color/colorButton" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="64dp"
        android:visibility="invisible"
        app:headerLayout="@layout/nav_header_not_registered"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/nav_menu_owner"/>

</androidx.constraintlayout.widget.ConstraintLayout>